// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormData should allow a mix of files and single file 1`] = `
{
  "uploadAnArrayOfFilesAndASingleFile": [
    "fourth file",
    "first file",
    "second file",
    "third file",
  ],
}
`;

exports[`FormData should allow mixed optional files 1`] = `
{
  "uploadMixedFiles": [
    "the required file",
  ],
}
`;

exports[`FormData should allow single optional files 1`] = `
{
  "uploadAMaybeFile": Any<Boolean>,
}
`;

exports[`FormData should create the correct schema 1`] = `
{
  "components": {
    "schemas": {
      "Upload": {
        "description": "The \`Upload\` scalar type represents a single file upload.",
        "format": "binary",
        "nullable": true,
        "type": "string",
      },
      "Uploads": {
        "description": "The \`Uploads\` scalar type represents multiple file uploads.",
        "items": {
          "format": "binary",
          "type": "string",
        },
        "nullable": true,
        "type": "array",
      },
    },
  },
  "info": {
    "description": "Description",
    "title": "The API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/mixed-optional-file/{id}": {
      "post": {
        "operationId": "uploadMixedOptionalFile",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "format": "int32",
              "type": "integer",
            },
            "x-graphql-variable-name": "id",
          },
        ],
        "requestBody": {
          "content": {
            "multipart/form-data": {
              "schema": {
                "properties": {
                  "optionalFile": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Upload",
                      },
                    ],
                    "nullable": true,
                    "type": "string",
                    "x-graphql-variable-name": "optionalFile",
                  },
                  "requiredFile": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Upload",
                      },
                    ],
                    "nullable": false,
                    "type": "string",
                    "x-graphql-variable-name": "requiredFile",
                  },
                },
                "required": [
                  "requiredFile",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "uploadMixedFiles": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "uploadMixedFiles",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "errorCode": {
                            "type": "string",
                          },
                          "location": {
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Invalid request",
          },
          "415": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "message": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Unsupported Media Type",
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "description": "Branch of data that does not contain errors",
                      "nullable": true,
                      "properties": {
                        "uploadMixedFiles": {
                          "items": {
                            "type": "string",
                          },
                          "type": "array",
                        },
                      },
                      "required": [
                        "uploadMixedFiles",
                      ],
                      "type": "object",
                    },
                    "errors": {
                      "items": {
                        "properties": {
                          "locations": {
                            "items": {
                              "properties": {
                                "column": {
                                  "type": "integer",
                                },
                                "line": {
                                  "type": "integer",
                                },
                              },
                              "type": "object",
                            },
                            "type": "array",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Internal Server Error",
          },
        },
        "x-graphql-operation": "mutation uploadMixedOptionalFile($id: Int!, $requiredFile: Upload!, $optionalFile: Upload) {
  uploadMixedFiles(
    id: $id
    requiredFile: $requiredFile
    optionalFile: $optionalFile
  )
}",
      },
    },
    "/optional-file/{id}": {
      "post": {
        "operationId": "uploadSingleOptionalFile",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "format": "int32",
              "type": "integer",
            },
            "x-graphql-variable-name": "id",
          },
        ],
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "nullable": true,
                "type": "object",
              },
            },
            "multipart/form-data": {
              "schema": {
                "properties": {
                  "optionalFile": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Upload",
                      },
                    ],
                    "nullable": true,
                    "type": "string",
                    "x-graphql-variable-name": "optionalFile",
                  },
                },
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "uploadAMaybeFile": {
                      "type": "boolean",
                    },
                  },
                  "required": [
                    "uploadAMaybeFile",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "errorCode": {
                            "type": "string",
                          },
                          "location": {
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Invalid request",
          },
          "415": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "message": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Unsupported Media Type",
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "description": "Branch of data that does not contain errors",
                      "nullable": true,
                      "properties": {
                        "uploadAMaybeFile": {
                          "type": "boolean",
                        },
                      },
                      "required": [
                        "uploadAMaybeFile",
                      ],
                      "type": "object",
                    },
                    "errors": {
                      "items": {
                        "properties": {
                          "locations": {
                            "items": {
                              "properties": {
                                "column": {
                                  "type": "integer",
                                },
                                "line": {
                                  "type": "integer",
                                },
                              },
                              "type": "object",
                            },
                            "type": "array",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Internal Server Error",
          },
        },
        "x-graphql-operation": "mutation uploadSingleOptionalFile($id: Int!, $optionalFile: Upload) {
  uploadAMaybeFile(id: $id, optionalFile: $optionalFile)
}",
      },
    },
    "/upload-an-array-of-files/{id}": {
      "post": {
        "operationId": "uploadAnArrayOfFiles",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
            "x-graphql-variable-name": "id",
          },
        ],
        "requestBody": {
          "content": {
            "multipart/form-data": {
              "schema": {
                "properties": {
                  "images": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Uploads",
                      },
                    ],
                    "nullable": false,
                    "type": "array",
                    "x-graphql-variable-name": "images",
                  },
                },
                "required": [
                  "images",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "uploadAnArrayOfFiles": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "uploadAnArrayOfFiles",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "errorCode": {
                            "type": "string",
                          },
                          "location": {
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Invalid request",
          },
          "415": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "message": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Unsupported Media Type",
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "description": "Branch of data that does not contain errors",
                      "nullable": true,
                      "properties": {
                        "uploadAnArrayOfFiles": {
                          "items": {
                            "type": "string",
                          },
                          "type": "array",
                        },
                      },
                      "required": [
                        "uploadAnArrayOfFiles",
                      ],
                      "type": "object",
                    },
                    "errors": {
                      "items": {
                        "properties": {
                          "locations": {
                            "items": {
                              "properties": {
                                "column": {
                                  "type": "integer",
                                },
                                "line": {
                                  "type": "integer",
                                },
                              },
                              "type": "object",
                            },
                            "type": "array",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Internal Server Error",
          },
        },
        "x-graphql-operation": "mutation uploadAnArrayOfFiles($id: String!, $images: Uploads!) {
  uploadAnArrayOfFiles(id: $id, images: $images)
}",
      },
    },
    "/upload-arrays-and-single/{id}": {
      "post": {
        "operationId": "uploadAnArrayOfFilesAndASingleFile",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
            "x-graphql-variable-name": "id",
          },
        ],
        "requestBody": {
          "content": {
            "multipart/form-data": {
              "schema": {
                "properties": {
                  "coverImage": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Upload",
                      },
                    ],
                    "nullable": false,
                    "type": "string",
                    "x-graphql-variable-name": "coverImage",
                  },
                  "files": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Uploads",
                      },
                    ],
                    "nullable": false,
                    "type": "array",
                    "x-graphql-variable-name": "files",
                  },
                },
                "required": [
                  "files",
                  "coverImage",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "uploadAnArrayOfFilesAndASingleFile": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "uploadAnArrayOfFilesAndASingleFile",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "errorCode": {
                            "type": "string",
                          },
                          "location": {
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Invalid request",
          },
          "415": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "message": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Unsupported Media Type",
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "description": "Branch of data that does not contain errors",
                      "nullable": true,
                      "properties": {
                        "uploadAnArrayOfFilesAndASingleFile": {
                          "items": {
                            "type": "string",
                          },
                          "type": "array",
                        },
                      },
                      "required": [
                        "uploadAnArrayOfFilesAndASingleFile",
                      ],
                      "type": "object",
                    },
                    "errors": {
                      "items": {
                        "properties": {
                          "locations": {
                            "items": {
                              "properties": {
                                "column": {
                                  "type": "integer",
                                },
                                "line": {
                                  "type": "integer",
                                },
                              },
                              "type": "object",
                            },
                            "type": "array",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Internal Server Error",
          },
        },
        "x-graphql-operation": "mutation uploadAnArrayOfFilesAndASingleFile($id: String!, $files: Uploads!, $coverImage: Upload!) {
  uploadAnArrayOfFilesAndASingleFile(
    id: $id
    otherFiles: $files
    coverPicture: $coverImage
  )
}",
      },
    },
    "/upload-file/{id}": {
      "post": {
        "operationId": "uploadFile",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "format": "int32",
              "type": "integer",
            },
            "x-graphql-variable-name": "id",
          },
        ],
        "requestBody": {
          "content": {
            "multipart/form-data": {
              "schema": {
                "properties": {
                  "file": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Upload",
                      },
                    ],
                    "nullable": false,
                    "type": "string",
                    "x-graphql-variable-name": "file",
                  },
                },
                "required": [
                  "file",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "uploadAFile": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "uploadAFile",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "errorCode": {
                            "type": "string",
                          },
                          "location": {
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Invalid request",
          },
          "415": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "message": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Unsupported Media Type",
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "description": "Branch of data that does not contain errors",
                      "nullable": true,
                      "properties": {
                        "uploadAFile": {
                          "type": "string",
                        },
                      },
                      "required": [
                        "uploadAFile",
                      ],
                      "type": "object",
                    },
                    "errors": {
                      "items": {
                        "properties": {
                          "locations": {
                            "items": {
                              "properties": {
                                "column": {
                                  "type": "integer",
                                },
                                "line": {
                                  "type": "integer",
                                },
                              },
                              "type": "object",
                            },
                            "type": "array",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Internal Server Error",
          },
        },
        "x-graphql-operation": "mutation uploadFile($id: Int!, $file: Upload!) {
  uploadAFile(id: $id, file: $file)
}",
      },
    },
    "/upload-multiple-images/{id}": {
      "post": {
        "operationId": "uploadMultipleFiles",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string",
            },
            "x-graphql-variable-name": "id",
          },
        ],
        "requestBody": {
          "content": {
            "multipart/form-data": {
              "schema": {
                "properties": {
                  "primaryImage": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Upload",
                      },
                    ],
                    "nullable": false,
                    "type": "string",
                    "x-graphql-variable-name": "primaryImage",
                  },
                  "secondary": {
                    "allOf": [
                      {
                        "$ref": "#/components/schemas/Upload",
                      },
                    ],
                    "nullable": false,
                    "type": "string",
                    "x-graphql-variable-name": "secondaryImage",
                  },
                },
                "required": [
                  "primaryImage",
                  "secondary",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "uploadMultipleFiles": {
                      "items": {
                        "type": "string",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "uploadMultipleFiles",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "errorCode": {
                            "type": "string",
                          },
                          "location": {
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Invalid request",
          },
          "415": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "errors": {
                      "items": {
                        "properties": {
                          "message": {
                            "type": "string",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Unsupported Media Type",
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "description": "Branch of data that does not contain errors",
                      "nullable": true,
                      "properties": {
                        "uploadMultipleFiles": {
                          "items": {
                            "type": "string",
                          },
                          "type": "array",
                        },
                      },
                      "required": [
                        "uploadMultipleFiles",
                      ],
                      "type": "object",
                    },
                    "errors": {
                      "items": {
                        "properties": {
                          "locations": {
                            "items": {
                              "properties": {
                                "column": {
                                  "type": "integer",
                                },
                                "line": {
                                  "type": "integer",
                                },
                              },
                              "type": "object",
                            },
                            "type": "array",
                          },
                          "message": {
                            "type": "string",
                          },
                          "path": {
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                        },
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Internal Server Error",
          },
        },
        "x-graphql-operation": "mutation uploadMultipleFiles($id: String!, $primaryImage: Upload!, $secondaryImage: Upload!) {
  uploadMultipleFiles(
    id: $id
    primaryImage: $primaryImage
    secondaryImage: $secondaryImage
  )
}",
      },
    },
  },
}
`;

exports[`FormData should fail if a file is too big 1`] = `
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "File truncated as it exceeds the 1000 byte size limit.",
      "path": [
        "uploadAnArrayOfFilesAndASingleFile",
      ],
    },
  ],
}
`;

exports[`FormData should handle errors in case of too many files\` 1`] = `
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": "5 max file uploads exceeded.",
      "path": [
        "uploadAnArrayOfFiles",
      ],
    },
  ],
}
`;

exports[`FormData should ignore other files\` 1`] = `
{
  "uploadAnArrayOfFiles": [],
}
`;

exports[`FormData should support an array of files\` 1`] = `
{
  "uploadAnArrayOfFiles": [
    "first file",
    "second file",
  ],
}
`;

exports[`FormData should support multipart form data requests with a single file 1`] = `
{
  "uploadAFile": "some data",
}
`;

exports[`FormData should support uploading multiple files 1`] = `
{
  "uploadMultipleFiles": [
    "firstImage",
    "secondImage",
  ],
}
`;

exports[`FormData should throw if no files where given\` 1`] = `
{
  "errors": [
    {
      "message": "Only "multipart/form-data" supported",
    },
  ],
}
`;
